lab1/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCPP.y
-----------------------------------------------------------------------------

state 117 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pStm -> Stm                                 (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp10 -> Exp10                             (12)
	%start_pExp9 -> Exp9                               (13)
	%start_pExp7 -> Exp7                               (14)
	%start_pExp3 -> Exp3                               (15)
	%start_pExp2 -> Exp2                               (16)
	%start_pExp1 -> Exp1                               (17)
	%start_pExp -> Exp                                 (18)
	%start_pExp4 -> Exp4                               (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp8 -> Exp8                               (22)
	%start_pListExp -> ListExp                         (23)
	%start_pListString -> ListString                   (24)
	%start_pType -> Type                               (25)
	%start_pListId -> ListId                           (26)
	Integer -> L_integ                                 (27)
	Double -> L_doubl                                  (28)
	String -> L_quoted                                 (29)
	Id -> L_Id                                         (30)
	Program -> ListDef                                 (31)
	ListDef ->                                         (32)
	ListDef -> ListDef Def                             (33)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (34)
	Def -> 'using' ListId ';'                          (35)
	ListArg ->                                         (36)
	ListArg -> Arg                                     (37)
	ListArg -> Arg ',' ListArg                         (38)
	ListStm ->                                         (39)
	ListStm -> ListStm Stm                             (40)
	Arg -> Type Id                                     (41)
	Stm -> Exp ';'                                     (42)
	Stm -> Type Id ';'                                 (43)
	Stm -> Type Id ',' ListId ';'                      (44)
	Stm -> Type Id '=' Exp ';'                         (45)
	Stm -> 'typedef' ListId Id ';'                     (46)
	Stm -> 'return' Exp ';'                            (47)
	Stm -> 'while' '(' Exp ')' Stm                     (48)
	Stm -> '{' ListStm '}'                             (49)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (50)
	Exp15 -> Integer                                   (51)
	Exp15 -> ListString                                (52)
	Exp15 -> Double                                    (53)
	Exp15 -> ListId                                    (54)
	Exp15 -> '(' Exp ')'                               (55)
	Exp14 -> Exp14 '[' Exp ']'                         (56)
	Exp14 -> Exp14 '(' ListExp ')'                     (57)
	Exp14 -> Exp14 '(' ')'                             (58)
	Exp14 -> Exp15                                     (59)
	Exp13 -> Exp13 '.' Exp14                           (60)
	Exp13 -> Exp13 '->' Id                             (61)
	Exp13 -> Exp13 '++'                                (62)
	Exp13 -> Exp13 '--'                                (63)
	Exp13 -> Exp14                                     (64)
	Exp12 -> '++' Exp12                                (65)
	Exp12 -> '--' Exp12                                (66)
	Exp12 -> '*' Exp12                                 (67)
	Exp12 -> '!' Exp12                                 (68)
	Exp12 -> Exp13                                     (69)
	Exp11 -> Exp11 '*' Exp12                           (70)
	Exp11 -> Exp11 '/' Exp12                           (71)
	Exp11 -> Exp11 '%' Exp12                           (72)
	Exp11 -> Exp12                                     (73)
	Exp10 -> Exp10 '+' Exp11                           (74)
	Exp10 -> Exp10 '-' Exp11                           (75)
	Exp10 -> Exp11                                     (76)
	Exp9 -> Exp9 '<<' Exp10                            (77)
	Exp9 -> Exp9 '>>' Exp10                            (78)
	Exp9 -> Exp10                                      (79)
	Exp7 -> Exp7 '==' Exp8                             (80)
	Exp7 -> Exp7 '!=' Exp8                             (81)
	Exp7 -> Exp8                                       (82)
	Exp3 -> Exp3 '&&' Exp4                             (83)
	Exp3 -> Exp4                                       (84)
	Exp2 -> Exp2 '||' Exp3                             (85)
	Exp2 -> Exp3                                       (86)
	Exp1 -> Exp2 '=' Exp1                              (87)
	Exp1 -> Exp2 '+=' Exp1                             (88)
	Exp1 -> Exp2 '-=' Exp1                             (89)
	Exp1 -> Exp2 '?' Exp ':' Exp1                      (90)
	Exp1 -> Exp2                                       (91)
	Exp -> Exp1                                        (92)
	Exp4 -> Exp5                                       (93)
	Exp5 -> Exp6                                       (94)
	Exp6 -> Exp7                                       (95)
	Exp8 -> Exp9                                       (96)
	ListExp ->                                         (97)
	ListExp -> Exp                                     (98)
	ListExp -> Exp ',' ListExp                         (99)
	ListString -> String                               (100)
	ListString -> String ListString                    (101)
	Type -> 'bool'                                     (102)
	Type -> 'double'                                   (103)
	Type -> 'int'                                      (104)
	Type -> 'void'                                     (105)
	Type -> ListId                                     (106)
	ListId -> Id                                       (107)
	ListId -> Id '::' ListId                           (108)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	'+='           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'-='           { PT _ (TS _ 14) }
	'->'           { PT _ (TS _ 15) }
	'.'            { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	'::'           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<<'           { PT _ (TS _ 21) }
	'='            { PT _ (TS _ 22) }
	'=='           { PT _ (TS _ 23) }
	'>>'           { PT _ (TS _ 24) }
	'?'            { PT _ (TS _ 25) }
	'['            { PT _ (TS _ 26) }
	']'            { PT _ (TS _ 27) }
	'bool'         { PT _ (TS _ 28) }
	'double'       { PT _ (TS _ 29) }
	'else'         { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'int'          { PT _ (TS _ 32) }
	'return'       { PT _ (TS _ 33) }
	'typedef'      { PT _ (TS _ 34) }
	'using'        { PT _ (TS _ 35) }
	'void'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pStm     rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp10   rule  12
	%start_pExp9    rule  13
	%start_pExp7    rule  14
	%start_pExp3    rule  15
	%start_pExp2    rule  16
	%start_pExp1    rule  17
	%start_pExp     rule  18
	%start_pExp4    rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp8    rule  22
	%start_pListExp rule  23
	%start_pListString rule  24
	%start_pType    rule  25
	%start_pListId  rule  26
	Integer         rule  27
	Double          rule  28
	String          rule  29
	Id              rule  30
	Program         rule  31
	ListDef         rules 32, 33
	Def             rules 34, 35
	ListArg         rules 36, 37, 38
	ListStm         rules 39, 40
	Arg             rule  41
	Stm             rules 42, 43, 44, 45, 46, 47, 48, 49, 50
	Exp15           rules 51, 52, 53, 54, 55
	Exp14           rules 56, 57, 58, 59
	Exp13           rules 60, 61, 62, 63, 64
	Exp12           rules 65, 66, 67, 68, 69
	Exp11           rules 70, 71, 72, 73
	Exp10           rules 74, 75, 76
	Exp9            rules 77, 78, 79
	Exp7            rules 80, 81, 82
	Exp3            rules 83, 84
	Exp2            rules 85, 86
	Exp1            rules 87, 88, 89, 90, 91
	Exp             rule  92
	Exp4            rule  93
	Exp5            rule  94
	Exp6            rule  95
	Exp8            rule  96
	ListExp         rules 97, 98, 99
	ListString      rules 100, 101
	Type            rules 102, 103, 104, 105, 106
	ListId          rules 107, 108

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 32
	'double'       reduce using rule 32
	'int'          reduce using rule 32
	'using'        reduce using rule 32
	'void'         reduce using rule 32
	L_Id           reduce using rule 32
	%eof           reduce using rule 32

	Program        goto state 102
	ListDef        goto state 103

State 1


	'bool'         reduce using rule 32
	'double'       reduce using rule 32
	'int'          reduce using rule 32
	'using'        reduce using rule 32
	'void'         reduce using rule 32
	L_Id           reduce using rule 32
	%eof           reduce using rule 32

	ListDef        goto state 101

State 2


	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'int'          shift, and enter state 36
	'using'        shift, and enter state 100
	'void'         shift, and enter state 37
	L_Id           shift, and enter state 31

	Id             goto state 29
	Def            goto state 98
	Type           goto state 99
	ListId         goto state 33

State 3


	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'int'          shift, and enter state 36
	'void'         shift, and enter state 37
	L_Id           shift, and enter state 31
	%eof           reduce using rule 36

	Id             goto state 29
	ListArg        goto state 96
	Arg            goto state 97
	Type           goto state 94
	ListId         goto state 33

State 4


	'!'            reduce using rule 39
	'('            reduce using rule 39
	'*'            reduce using rule 39
	'++'           reduce using rule 39
	'--'           reduce using rule 39
	'bool'         reduce using rule 39
	'double'       reduce using rule 39
	'if'           reduce using rule 39
	'int'          reduce using rule 39
	'return'       reduce using rule 39
	'typedef'      reduce using rule 39
	'void'         reduce using rule 39
	'while'        reduce using rule 39
	'{'            reduce using rule 39
	L_integ        reduce using rule 39
	L_doubl        reduce using rule 39
	L_quoted       reduce using rule 39
	L_Id           reduce using rule 39
	%eof           reduce using rule 39

	ListStm        goto state 95

State 5


	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'int'          shift, and enter state 36
	'void'         shift, and enter state 37
	L_Id           shift, and enter state 31

	Id             goto state 29
	Arg            goto state 93
	Type           goto state 94
	ListId         goto state 33

State 6


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'if'           shift, and enter state 88
	'int'          shift, and enter state 36
	'return'       shift, and enter state 89
	'typedef'      shift, and enter state 90
	'void'         shift, and enter state 37
	'while'        shift, and enter state 91
	'{'            shift, and enter state 92
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Stm            goto state 84
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp1           goto state 53
	Exp            goto state 85
	Exp4           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp8           goto state 58
	ListString     goto state 60
	Type           goto state 86
	ListId         goto state 87

State 7


	'('            shift, and enter state 63
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 83
	ListString     goto state 60
	ListId         goto state 61

State 8


	'('            shift, and enter state 63
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 82
	ListString     goto state 60
	ListId         goto state 61

State 9


	'('            shift, and enter state 63
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 81
	ListString     goto state 60
	ListId         goto state 61

State 10


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 80
	ListString     goto state 60
	ListId         goto state 61

State 11


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 79
	ListString     goto state 60
	ListId         goto state 61

State 12


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 78
	ListString     goto state 60
	ListId         goto state 61

State 13


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 77
	ListString     goto state 60
	ListId         goto state 61

State 14


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 76
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 15


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp3           goto state 75
	Exp4           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 16


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp3           goto state 51
	Exp2           goto state 74
	Exp4           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 17


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp1           goto state 73
	Exp4           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 18


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp1           goto state 53
	Exp            goto state 72
	Exp4           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 19


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp4           goto state 71
	Exp5           goto state 56
	Exp6           goto state 57
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 20


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp5           goto state 70
	Exp6           goto state 57
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 21


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp6           goto state 69
	Exp8           goto state 58
	ListString     goto state 60
	ListId         goto state 61

State 22


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp8           goto state 68
	ListString     goto state 60
	ListId         goto state 61

State 23


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 67
	L_quoted       shift, and enter state 40
	L_Id           shift, and enter state 31
	%eof           reduce using rule 97

	Integer        goto state 41
	Double         goto state 42
	String         goto state 38
	Id             goto state 29
	Exp15          goto state 43
	Exp14          goto state 44
	Exp13          goto state 45
	Exp12          goto state 46
	Exp11          goto state 47
	Exp10          goto state 48
	Exp9           goto state 49
	Exp7           goto state 50
	Exp3           goto state 51
	Exp2           goto state 52
	Exp1           goto state 53
	Exp            goto state 54
	Exp4           goto state 55
	Exp5           goto state 56
	Exp6           goto state 57
	Exp8           goto state 58
	ListExp        goto state 59
	ListString     goto state 60
	ListId         goto state 61

State 24


	L_quoted       shift, and enter state 40

	String         goto state 38
	ListString     goto state 39

State 25


	'bool'         shift, and enter state 34
	'double'       shift, and enter state 35
	'int'          shift, and enter state 36
	'void'         shift, and enter state 37
	L_Id           shift, and enter state 31

	Id             goto state 29
	Type           goto state 32
	ListId         goto state 33

State 26


	L_Id           shift, and enter state 31

	Id             goto state 29
	ListId         goto state 30

State 27


	L_integ        shift, and enter state 28


State 28

	Integer -> L_integ .                                (rule 27)

	'!='           reduce using rule 27
	'%'            reduce using rule 27
	'&&'           reduce using rule 27
	'('            reduce using rule 27
	')'            reduce using rule 27
	'*'            reduce using rule 27
	'+'            reduce using rule 27
	'++'           reduce using rule 27
	'+='           reduce using rule 27
	','            reduce using rule 27
	'-'            reduce using rule 27
	'--'           reduce using rule 27
	'-='           reduce using rule 27
	'->'           reduce using rule 27
	'.'            reduce using rule 27
	'/'            reduce using rule 27
	':'            reduce using rule 27
	';'            reduce using rule 27
	'<<'           reduce using rule 27
	'='            reduce using rule 27
	'=='           reduce using rule 27
	'>>'           reduce using rule 27
	'?'            reduce using rule 27
	'['            reduce using rule 27
	']'            reduce using rule 27
	'||'           reduce using rule 27
	%eof           reduce using rule 27


State 29

	ListId -> Id .                                      (rule 107)
	ListId -> Id . '::' ListId                          (rule 108)

	'!='           reduce using rule 107
	'%'            reduce using rule 107
	'&&'           reduce using rule 107
	'('            reduce using rule 107
	')'            reduce using rule 107
	'*'            reduce using rule 107
	'+'            reduce using rule 107
	'++'           reduce using rule 107
	'+='           reduce using rule 107
	','            reduce using rule 107
	'-'            reduce using rule 107
	'--'           reduce using rule 107
	'-='           reduce using rule 107
	'->'           reduce using rule 107
	'.'            reduce using rule 107
	'/'            reduce using rule 107
	':'            reduce using rule 107
	'::'           shift, and enter state 145
	';'            reduce using rule 107
	'<<'           reduce using rule 107
	'='            reduce using rule 107
	'=='           reduce using rule 107
	'>>'           reduce using rule 107
	'?'            reduce using rule 107
	'['            reduce using rule 107
	']'            reduce using rule 107
	'||'           reduce using rule 107
	L_Id           reduce using rule 107
	%eof           reduce using rule 107


State 30

	%start_pListId -> ListId .                          (rule 26)

	%eof           accept


State 31

	Id -> L_Id .                                        (rule 30)

	'!='           reduce using rule 30
	'%'            reduce using rule 30
	'&&'           reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'*'            reduce using rule 30
	'+'            reduce using rule 30
	'++'           reduce using rule 30
	'+='           reduce using rule 30
	','            reduce using rule 30
	'-'            reduce using rule 30
	'--'           reduce using rule 30
	'-='           reduce using rule 30
	'->'           reduce using rule 30
	'.'            reduce using rule 30
	'/'            reduce using rule 30
	':'            reduce using rule 30
	'::'           reduce using rule 30
	';'            reduce using rule 30
	'<<'           reduce using rule 30
	'='            reduce using rule 30
	'=='           reduce using rule 30
	'>>'           reduce using rule 30
	'?'            reduce using rule 30
	'['            reduce using rule 30
	']'            reduce using rule 30
	'||'           reduce using rule 30
	L_Id           reduce using rule 30
	%eof           reduce using rule 30


State 32

	%start_pType -> Type .                              (rule 25)

	%eof           accept


State 33

	Type -> ListId .                                    (rule 106)

	L_Id           reduce using rule 106
	%eof           reduce using rule 106


State 34

	Type -> 'bool' .                                    (rule 102)

	L_Id           reduce using rule 102
	%eof           reduce using rule 102


State 35

	Type -> 'double' .                                  (rule 103)

	L_Id           reduce using rule 103
	%eof           reduce using rule 103


State 36

	Type -> 'int' .                                     (rule 104)

	L_Id           reduce using rule 104
	%eof           reduce using rule 104


State 37

	Type -> 'void' .                                    (rule 105)

	L_Id           reduce using rule 105
	%eof           reduce using rule 105


State 38

	ListString -> String .                              (rule 100)
	ListString -> String . ListString                   (rule 101)

	'!='           reduce using rule 100
	'%'            reduce using rule 100
	'&&'           reduce using rule 100
	'('            reduce using rule 100
	')'            reduce using rule 100
	'*'            reduce using rule 100
	'+'            reduce using rule 100
	'++'           reduce using rule 100
	'+='           reduce using rule 100
	','            reduce using rule 100
	'-'            reduce using rule 100
	'--'           reduce using rule 100
	'-='           reduce using rule 100
	'->'           reduce using rule 100
	'.'            reduce using rule 100
	'/'            reduce using rule 100
	':'            reduce using rule 100
	';'            reduce using rule 100
	'<<'           reduce using rule 100
	'='            reduce using rule 100
	'=='           reduce using rule 100
	'>>'           reduce using rule 100
	'?'            reduce using rule 100
	'['            reduce using rule 100
	']'            reduce using rule 100
	'||'           reduce using rule 100
	L_quoted       shift, and enter state 40
	%eof           reduce using rule 100

	String         goto state 38
	ListString     goto state 144

State 39

	%start_pListString -> ListString .                  (rule 24)

	%eof           accept


State 40

	String -> L_quoted .                                (rule 29)

	'!='           reduce using rule 29
	'%'            reduce using rule 29
	'&&'           reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'*'            reduce using rule 29
	'+'            reduce using rule 29
	'++'           reduce using rule 29
	'+='           reduce using rule 29
	','            reduce using rule 29
	'-'            reduce using rule 29
	'--'           reduce using rule 29
	'-='           reduce using rule 29
	'->'           reduce using rule 29
	'.'            reduce using rule 29
	'/'            reduce using rule 29
	':'            reduce using rule 29
	';'            reduce using rule 29
	'<<'           reduce using rule 29
	'='            reduce using rule 29
	'=='           reduce using rule 29
	'>>'           reduce using rule 29
	'?'            reduce using rule 29
	'['            reduce using rule 29
	']'            reduce using rule 29
	'||'           reduce using rule 29
	L_quoted       reduce using rule 29
	%eof           reduce using rule 29


State 41

	Exp15 -> Integer .                                  (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	'('            reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	'++'           reduce using rule 51
	'+='           reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'--'           reduce using rule 51
	'-='           reduce using rule 51
	'->'           reduce using rule 51
	'.'            reduce using rule 51
	'/'            reduce using rule 51
	':'            reduce using rule 51
	';'            reduce using rule 51
	'<<'           reduce using rule 51
	'='            reduce using rule 51
	'=='           reduce using rule 51
	'>>'           reduce using rule 51
	'?'            reduce using rule 51
	'['            reduce using rule 51
	']'            reduce using rule 51
	'||'           reduce using rule 51
	%eof           reduce using rule 51


State 42

	Exp15 -> Double .                                   (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	'++'           reduce using rule 53
	'+='           reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'--'           reduce using rule 53
	'-='           reduce using rule 53
	'->'           reduce using rule 53
	'.'            reduce using rule 53
	'/'            reduce using rule 53
	':'            reduce using rule 53
	';'            reduce using rule 53
	'<<'           reduce using rule 53
	'='            reduce using rule 53
	'=='           reduce using rule 53
	'>>'           reduce using rule 53
	'?'            reduce using rule 53
	'['            reduce using rule 53
	']'            reduce using rule 53
	'||'           reduce using rule 53
	%eof           reduce using rule 53


State 43

	Exp14 -> Exp15 .                                    (rule 59)
